# swap

./: Pipfile  assets.ipynb  frn-corp-valo.ipynb  frn-gov-valo.ipynb  notesSwaps.md  pyproject.toml  repo.ipynb  sofr-ois-valo-test.ipynb  sofr-ois-valo.ipynb  swap.ipynb  variableBond.ipynb
data/: swap.json
doc/: instruments.ods
